AUGREL/src/objects/SfCase__x.object
<CustomObject>
    <fields>
        <fullName>newZipCodeExtnC__c</fullName>
        <description>newZipCodeExtnC</description>
        <externalDeveloperName>newZipCodeExtnC</externalDeveloperName>
        <label>newZipCodeExtnC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>onlineFlagC__c</fullName>
        <description>onlineFlagC</description>
        <externalDeveloperName>onlineFlagC</externalDeveloperName>
        <label>onlineFlagC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>origin__c</fullName>
        <description>origin</description>
        <externalDeveloperName>origin</externalDeveloperName>
        <label>origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>overallConsentC__c</fullName>
        <description>overallConsentC</description>
        <externalDeveloperName>overallConsentC</externalDeveloperName>
        <label>overallConsentC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>overallConsentDateC__c</fullName>
        <description>overallConsentDateC</description>
        <externalDeveloperName>overallConsentDateC</externalDeveloperName>
        <label>overallConsentDateC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ownerId__c</fullName>
        <description>ownerId</description>
        <externalDeveloperName>ownerId</externalDeveloperName>
        <label>ownerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentId__c</fullName>
        <description>parentId</description>
        <externalDeveloperName>parentId</externalDeveloperName>
        <label>parentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payOffQuoteC__c</fullName>
        <description>payOffQuoteC</description>
        <externalDeveloperName>payOffQuoteC</externalDeveloperName>
        <label>payOffQuoteC</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>paymentNotReceivedEmailC__c</fullName>
        <description>paymentNotReceivedEmailC</description>
        <externalDeveloperName>paymentNotReceivedEmailC</externalDeveloperName>
        <label>paymentNotReceivedEmailC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentNotReceivedTextC__c</fullName>
        <description>paymentNotReceivedTextC</description>
        <externalDeveloperName>paymentNotReceivedTextC</externalDeveloperName>
        <label>paymentNotReceivedTextC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentReceivedEmailC__c</fullName>
        <description>paymentReceivedEmailC</description>
        <externalDeveloperName>paymentReceivedEmailC</externalDeveloperName>
        <label>paymentReceivedEmailC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentReceivedTextC__c</fullName>
        <description>paymentReceivedTextC</description>
        <externalDeveloperName>paymentReceivedTextC</externalDeveloperName>
        <label>paymentReceivedTextC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentReminderDayC__c</fullName>
        <description>paymentReminderDayC</description>
        <externalDeveloperName>paymentReminderDayC</externalDeveloperName>
        <label>paymentReminderDayC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentReminderEmailC__c</fullName>
        <description>paymentReminderEmailC</description>
        <externalDeveloperName>paymentReminderEmailC</externalDeveloperName>
        <label>paymentReminderEmailC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentReminderTextC__c</fullName>
        <description>paymentReminderTextC</description>
        <externalDeveloperName>paymentReminderTextC</externalDeveloperName>
        <label>paymentReminderTextC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>perDiemC__c</fullName>
        <description>perDiemC</description>
        <externalDeveloperName>perDiemC</externalDeveloperName>
        <label>perDiemC</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>preferredContactC__c</fullName>
        <description>preferredContactC</description>
        <externalDeveloperName>preferredContactC</externalDeveloperName>
        <label>preferredContactC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>previousPassC__c</fullName>
        <description>previousPassC</description>
        <externalDeveloperName>previousPassC</externalDeveloperName>
        <label>previousPassC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>priority__c</fullName>
        <description>priority</description>
        <externalDeveloperName>priority</externalDeveloperName>
        <label>priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>processDateC__c</fullName>
        <description>processDateC</description>
        <externalDeveloperName>processDateC</externalDeveloperName>
        <label>processDateC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>programIC__c</fullName>
        <description>programIC</description>
        <externalDeveloperName>programIC</externalDeveloperName>
        <label>programIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>programIIC__c</fullName>
        <description>programIIC</description>
        <externalDeveloperName>programIIC</externalDeveloperName>
        <label>programIIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>programIIIC__c</fullName>
        <description>programIIIC</description>
        <externalDeveloperName>programIIIC</externalDeveloperName>
        <label>programIIIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purchaseOptC__c</fullName>
        <description>purchaseOptC</description>
        <externalDeveloperName>purchaseOptC</externalDeveloperName>
        <label>purchaseOptC</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quotedToC__c</fullName>
        <description>quotedToC</description>
        <externalDeveloperName>quotedToC</externalDeveloperName>
        <label>quotedToC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reason__c</fullName>
        <description>reason</description>
        <externalDeveloperName>reason</externalDeveloperName>
        <label>reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientC__c</fullName>
        <description>recipientC</description>
        <externalDeveloperName>recipientC</externalDeveloperName>
        <label>recipientC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordTypeId__c</fullName>
        <description>recordTypeId</description>
        <externalDeveloperName>recordTypeId</externalDeveloperName>
        <label>recordTypeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reopenedC__c</fullName>
        <description>reopenedC</description>
        <externalDeveloperName>reopenedC</externalDeveloperName>
        <label>reopenedC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>residualValueC__c</fullName>
        <description>residualValueC</description>
        <externalDeveloperName>residualValueC</externalDeveloperName>
        <label>residualValueC</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>responseDateDueC__c</fullName>
        <description>responseDateDueC</description>
        <externalDeveloperName>responseDateDueC</externalDeveloperName>
        <label>responseDateDueC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rfdPicklistC__c</fullName>
        <description>rfdPicklistC</description>
        <externalDeveloperName>rfdPicklistC</externalDeveloperName>
        <label>rfdPicklistC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rfdTextC__c</fullName>
        <description>rfdTextC</description>
        <externalDeveloperName>rfdTextC</externalDeveloperName>
        <label>rfdTextC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlAccountTerminatedC__c</fullName>
        <description>rlAccountTerminatedC</description>
        <externalDeveloperName>rlAccountTerminatedC</externalDeveloperName>
        <label>rlAccountTerminatedC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rlActionAgencyZipC__c</fullName>
        <description>rlActionAgencyZipC</description>
        <externalDeveloperName>rlActionAgencyZipC</externalDeveloperName>
        <label>rlActionAgencyZipC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlAuctionAgencyCityC__c</fullName>
        <description>rlAuctionAgencyCityC</description>
        <externalDeveloperName>rlAuctionAgencyCityC</externalDeveloperName>
        <label>rlAuctionAgencyCityC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlAuctionAgencyNameC__c</fullName>
        <description>rlAuctionAgencyNameC</description>
        <externalDeveloperName>rlAuctionAgencyNameC</externalDeveloperName>
        <label>rlAuctionAgencyNameC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlAuctionAgencyPhoneC__c</fullName>
        <description>rlAuctionAgencyPhoneC</description>
        <externalDeveloperName>rlAuctionAgencyPhoneC</externalDeveloperName>
        <label>rlAuctionAgencyPhoneC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlAuctionAgencyStateC__c</fullName>
        <description>rlAuctionAgencyStateC</description>
        <externalDeveloperName>rlAuctionAgencyStateC</externalDeveloperName>
        <label>rlAuctionAgencyStateC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlAuctionAgencyStreet1C__c</fullName>
        <description>rlAuctionAgencyStreet1C</description>
        <externalDeveloperName>rlAuctionAgencyStreet1C</externalDeveloperName>
        <label>rlAuctionAgencyStreet1C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlAuctionAgencyStreet2C__c</fullName>
        <description>rlAuctionAgencyStreet2C</description>
        <externalDeveloperName>rlAuctionAgencyStreet2C</externalDeveloperName>
        <label>rlAuctionAgencyStreet2C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlAuctionAgencyUrlC__c</fullName>
        <description>rlAuctionAgencyUrlC</description>
        <externalDeveloperName>rlAuctionAgencyUrlC</externalDeveloperName>
        <label>rlAuctionAgencyUrlC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlAutoImsHoldPlacedC__c</fullName>
        <description>rlAutoImsHoldPlacedC</description>
        <externalDeveloperName>rlAutoImsHoldPlacedC</externalDeveloperName>
        <label>rlAutoImsHoldPlacedC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rlInitPassCompltnTimeC__c</fullName>
        <description>rlInitPassCompltnTimeC</description>
        <externalDeveloperName>rlInitPassCompltnTimeC</externalDeveloperName>
        <label>rlInitPassCompltnTimeC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlInitialAssigneeC__c</fullName>
        <description>rlInitialAssigneeC</description>
        <externalDeveloperName>rlInitialAssigneeC</externalDeveloperName>
        <label>rlInitialAssigneeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlInitialAssignmentTimeC__c</fullName>
        <description>rlInitialAssignmentTimeC</description>
        <externalDeveloperName>rlInitialAssignmentTimeC</externalDeveloperName>
        <label>rlInitialAssignmentTimeC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlNosFirstSaleDateC__c</fullName>
        <description>rlNosFirstSaleDateC</description>
        <externalDeveloperName>rlNosFirstSaleDateC</externalDeveloperName>
        <label>rlNosFirstSaleDateC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlOnlineSale1FromC__c</fullName>
        <description>rlOnlineSale1FromC</description>
        <externalDeveloperName>rlOnlineSale1FromC</externalDeveloperName>
        <label>rlOnlineSale1FromC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlOnlineSale1ToC__c</fullName>
        <description>rlOnlineSale1ToC</description>
        <externalDeveloperName>rlOnlineSale1ToC</externalDeveloperName>
        <label>rlOnlineSale1ToC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlOnlineSale2FromC__c</fullName>
        <description>rlOnlineSale2FromC</description>
        <externalDeveloperName>rlOnlineSale2FromC</externalDeveloperName>
        <label>rlOnlineSale2FromC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlOnlineSale2ToC__c</fullName>
        <description>rlOnlineSale2ToC</description>
        <externalDeveloperName>rlOnlineSale2ToC</externalDeveloperName>
        <label>rlOnlineSale2ToC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlParentRecordTypeC__c</fullName>
        <description>rlParentRecordTypeC</description>
        <externalDeveloperName>rlParentRecordTypeC</externalDeveloperName>
        <label>rlParentRecordTypeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlPhysicalSaleDate1C__c</fullName>
        <description>rlPhysicalSaleDate1C</description>
        <externalDeveloperName>rlPhysicalSaleDate1C</externalDeveloperName>
        <label>rlPhysicalSaleDate1C</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlPhysicalSaleDate2C__c</fullName>
        <description>rlPhysicalSaleDate2C</description>
        <externalDeveloperName>rlPhysicalSaleDate2C</externalDeveloperName>
        <label>rlPhysicalSaleDate2C</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlPhysicalSaleTime1C__c</fullName>
        <description>rlPhysicalSaleTime1C</description>
        <externalDeveloperName>rlPhysicalSaleTime1C</externalDeveloperName>
        <label>rlPhysicalSaleTime1C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlPhysicalSaleTime2C__c</fullName>
        <description>rlPhysicalSaleTime2C</description>
        <externalDeveloperName>rlPhysicalSaleTime2C</externalDeveloperName>
        <label>rlPhysicalSaleTime2C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlRepoDateC__c</fullName>
        <description>rlRepoDateC</description>
        <externalDeveloperName>rlRepoDateC</externalDeveloperName>
        <label>rlRepoDateC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlRequiredNoticeDateC__c</fullName>
        <description>rlRequiredNoticeDateC</description>
        <externalDeveloperName>rlRequiredNoticeDateC</externalDeveloperName>
        <label>rlRequiredNoticeDateC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlRequiredNoticeDtTimeC__c</fullName>
        <description>rlRequiredNoticeDtTimeC</description>
        <externalDeveloperName>rlRequiredNoticeDtTimeC</externalDeveloperName>
        <label>rlRequiredNoticeDtTimeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlRequiredServiceLvlDtC__c</fullName>
        <description>rlRequiredServiceLvlDtC</description>
        <externalDeveloperName>rlRequiredServiceLvlDtC</externalDeveloperName>
        <label>rlRequiredServiceLvlDtC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlSalvageSaleDate1C__c</fullName>
        <description>rlSalvageSaleDate1C</description>
        <externalDeveloperName>rlSalvageSaleDate1C</externalDeveloperName>
        <label>rlSalvageSaleDate1C</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlSalvageSaleDate2C__c</fullName>
        <description>rlSalvageSaleDate2C</description>
        <externalDeveloperName>rlSalvageSaleDate2C</externalDeveloperName>
        <label>rlSalvageSaleDate2C</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlSalvageSaleDate3C__c</fullName>
        <description>rlSalvageSaleDate3C</description>
        <externalDeveloperName>rlSalvageSaleDate3C</externalDeveloperName>
        <label>rlSalvageSaleDate3C</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlSalvageSaleTime1C__c</fullName>
        <description>rlSalvageSaleTime1C</description>
        <externalDeveloperName>rlSalvageSaleTime1C</externalDeveloperName>
        <label>rlSalvageSaleTime1C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlSalvageSaleTime2C__c</fullName>
        <description>rlSalvageSaleTime2C</description>
        <externalDeveloperName>rlSalvageSaleTime2C</externalDeveloperName>
        <label>rlSalvageSaleTime2C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlSalvageSaleTime3C__c</fullName>
        <description>rlSalvageSaleTime3C</description>
        <externalDeveloperName>rlSalvageSaleTime3C</externalDeveloperName>
        <label>rlSalvageSaleTime3C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlScndryPassCompltnTimeC__c</fullName>
        <description>rlScndryPassCompltnTimeC</description>
        <externalDeveloperName>rlScndryPassCompltnTimeC</externalDeveloperName>
        <label>rlScndryPassCompltnTimeC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlScoreC__c</fullName>
        <description>rlScoreC</description>
        <externalDeveloperName>rlScoreC</externalDeveloperName>
        <label>rlScoreC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rlScoreDescriptionC__c</fullName>
        <description>rlScoreDescriptionC</description>
        <externalDeveloperName>rlScoreDescriptionC</externalDeveloperName>
        <label>rlScoreDescriptionC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlSecondaryAssignmentTimeC__c</fullName>
        <description>rlSecondaryAssignmentTimeC</description>
        <externalDeveloperName>rlSecondaryAssignmentTimeC</externalDeveloperName>
        <label>rlSecondaryAssignmentTimeC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlStateOfJurisdictionC__c</fullName>
        <description>rlStateOfJurisdictionC</description>
        <externalDeveloperName>rlStateOfJurisdictionC</externalDeveloperName>
        <label>rlStateOfJurisdictionC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rlSysReqrdNoticeDtTimeC__c</fullName>
        <description>rlSysReqrdNoticeDtTimeC</description>
        <externalDeveloperName>rlSysReqrdNoticeDtTimeC</externalDeveloperName>
        <label>rlSysReqrdNoticeDtTimeC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rlTemplateDataAvailableC__c</fullName>
        <description>rlTemplateDataAvailableC</description>
        <externalDeveloperName>rlTemplateDataAvailableC</externalDeveloperName>
        <label>rlTemplateDataAvailableC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rlTemplateSlaExpiredC__c</fullName>
        <description>rlTemplateSlaExpiredC</description>
        <externalDeveloperName>rlTemplateSlaExpiredC</externalDeveloperName>
        <label>rlTemplateSlaExpiredC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rlVinC__c</fullName>
        <description>rlVinC</description>
        <externalDeveloperName>rlVinC</externalDeveloperName>
        <label>rlVinC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceRecipientC__c</fullName>
        <description>serviceRecipientC</description>
        <externalDeveloperName>serviceRecipientC</externalDeveloperName>
        <label>serviceRecipientC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceRequestCategoryC__c</fullName>
        <description>serviceRequestCategoryC</description>
        <externalDeveloperName>serviceRequestCategoryC</externalDeveloperName>
        <label>serviceRequestCategoryC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceRequestTypeC__c</fullName>
        <description>serviceRequestTypeC</description>
        <externalDeveloperName>serviceRequestTypeC</externalDeveloperName>
        <label>serviceRequestTypeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceRequestUserGroupC__c</fullName>
        <description>serviceRequestUserGroupC</description>
        <externalDeveloperName>serviceRequestUserGroupC</externalDeveloperName>
        <label>serviceRequestUserGroupC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceResultC__c</fullName>
        <description>serviceResultC</description>
        <externalDeveloperName>serviceResultC</externalDeveloperName>
        <label>serviceResultC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceTypeC__c</fullName>
        <description>serviceTypeC</description>
        <externalDeveloperName>serviceTypeC</externalDeveloperName>
        <label>serviceTypeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceCreatedByC__c</fullName>
        <description>sourceCreatedByC</description>
        <externalDeveloperName>sourceCreatedByC</externalDeveloperName>
        <label>sourceCreatedByC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceCreatedDateC__c</fullName>
        <description>sourceCreatedDateC</description>
        <externalDeveloperName>sourceCreatedDateC</externalDeveloperName>
        <label>sourceCreatedDateC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sourceSystemCreatedByC__c</fullName>
        <description>sourceSystemCreatedByC</description>
        <externalDeveloperName>sourceSystemCreatedByC</externalDeveloperName>
        <label>sourceSystemCreatedByC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>srFirstNameC__c</fullName>
        <description>srFirstNameC</description>
        <externalDeveloperName>srFirstNameC</externalDeveloperName>
        <label>srFirstNameC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>srLastNameBusinessNameC__c</fullName>
        <description>srLastNameBusinessNameC</description>
        <externalDeveloperName>srLastNameBusinessNameC</externalDeveloperName>
        <label>srLastNameBusinessNameC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>starsSrNumberC__c</fullName>
        <description>starsSrNumberC</description>
        <externalDeveloperName>starsSrNumberC</externalDeveloperName>
        <label>starsSrNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>status</description>
        <externalDeveloperName>status</externalDeveloperName>
        <label>status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subject__c</fullName>
        <description>subject</description>
        <externalDeveloperName>subject</externalDeveloperName>
        <label>subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>suppliedCompany__c</fullName>
        <description>suppliedCompany</description>
        <externalDeveloperName>suppliedCompany</externalDeveloperName>
        <label>suppliedCompany</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>suppliedEmail__c</fullName>
        <description>suppliedEmail</description>
        <externalDeveloperName>suppliedEmail</externalDeveloperName>
        <label>suppliedEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>suppliedName__c</fullName>
        <description>suppliedName</description>
        <externalDeveloperName>suppliedName</externalDeveloperName>
        <label>suppliedName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>suppliedPhone__c</fullName>
        <description>suppliedPhone</description>
        <externalDeveloperName>suppliedPhone</externalDeveloperName>
        <label>suppliedPhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>supportRequestDescriptionC__c</fullName>
        <description>supportRequestDescriptionC</description>
        <externalDeveloperName>supportRequestDescriptionC</externalDeveloperName>
        <label>supportRequestDescriptionC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemModStamp__c</fullName>
        <description>systemModStamp</description>
        <externalDeveloperName>systemModStamp</externalDeveloperName>
        <label>systemModStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>takeOwnershipC__c</fullName>
        <description>takeOwnershipC</description>
        <externalDeveloperName>takeOwnershipC</externalDeveloperName>
        <label>takeOwnershipC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>teamLeadNameExtC__c</fullName>
        <description>teamLeadNameExtC</description>
        <externalDeveloperName>teamLeadNameExtC</externalDeveloperName>
        <label>teamLeadNameExtC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telemarketingPrivacyC__c</fullName>
        <description>telemarketingPrivacyC</description>
        <externalDeveloperName>telemarketingPrivacyC</externalDeveloperName>
        <label>telemarketingPrivacyC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfsLfsDealerPrivacyC__c</fullName>
        <description>tfsLfsDealerPrivacyC</description>
        <externalDeveloperName>tfsLfsDealerPrivacyC</externalDeveloperName>
        <label>tfsLfsDealerPrivacyC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfsLfsInformnEmailAddrC__c</fullName>
        <description>tfsLfsInformnEmailAddrC</description>
        <externalDeveloperName>tfsLfsInformnEmailAddrC</externalDeveloperName>
        <label>tfsLfsInformnEmailAddrC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thirdPartyPrivacyC__c</fullName>
        <description>thirdPartyPrivacyC</description>
        <externalDeveloperName>thirdPartyPrivacyC</externalDeveloperName>
        <label>thirdPartyPrivacyC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transferReasonC__c</fullName>
        <description>transferReasonC</description>
        <externalDeveloperName>transferReasonC</externalDeveloperName>
        <label>transferReasonC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <description>type</description>
        <externalDeveloperName>type</externalDeveloperName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warmTransferC__c</fullName>
        <description>warmTransferC</description>
        <externalDeveloperName>warmTransferC</externalDeveloperName>
        <label>warmTransferC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SfCase</label>
    <pluralLabel>SfCase</pluralLabel>
</CustomObject>